--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-ad>
-    <title>My Flask App</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<head>
+    <title>Pro Chubs GC</title>
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
 </head>
 <body>
-    <h1>Welcome to My Flask App</h1>
-    <p>This is a simple Flask application.</p>
+    <h1>Welcome to Pro Chubs GC</h1>
+    <p>This is a simple page for simple men.</p>
     <form>
         <input type="text" name="name" placeholder="Enter your name">
         <input type="submit">
